--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -39,12 +39,13 @@
   <strong>Sousse</strong> on 08-09-2024
 </p>
 <div class="cards">
-  <div class="card" style="width: 25rem">
+  <div class="card" style="width: 35rem">
     <div class="card-header">Train Rapide GNX140</div>
     <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">
-        With supporting text below as a natural lead-in to additional content.
+      <p class="card-text" style="text-align: center">
+        22:00&nbsp;|&nbsp;Eljem&nbsp;|&nbsp;Thu,30,Nov
+        <span style="margin: 0 10px">01:30 hrs</span>
+        23:30 | Sousse | Thu,30,Nov
       </p>
       <div class="btnP">
         <button class="custom-btn btn-5"><span>Book Now</span></button>
